增加周报模板接口
